--- a/web-server/public/about.html
+++ b/web-server/public/about.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+  <link href="/css/styles.css" rel="stylesheet" />
+</head>
 
 <body>
   <header>
     <h1>About Us</h1>
+    <img src="/images/sunabouzu.jpg" alt="sunabouzu" />
   </header>
 </body>
 
