--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+  <link href="/css/styles.css" rel="stylesheet" />
+  <script src="/js/app.js"></script>
+</head>
 
 <body>
   <header>
